endpoints para panel de estudiante: todos cursos, inscribirse, ver material del curso